--- a/src/Pages/About/About.css
+++ b/src/Pages/About/About.css
@@ -1,10 +1,11 @@
-.about-container {
-  max-width: 1100px;
+/* .about-container {
+  max-width: 1200px;
   margin: auto;
-}
+} */
 
 .section-container {
   padding: 40px;
+  margin-top: 30px;
   border-radius: 15px;
   transition: transform 0.3s ease-in-out;
 }
